# simple_file_handler

./: .gitignore  README.md  pyproject.toml  requirements.txt
simple_file_handler/: __init__.py  exceptions.py  handler.py
tests/: test_handler.py
